<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.uba.weathersg.MainActivity">

        <com.example.uba.weathersg.views.HeaderView
            android:id="@+id/v_header_view_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin_half"
            android:layout_marginTop="@dimen/activity_vertical_margin_half"
            android:background="@color/material_color_bluegrey_800"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_morning_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/main_tab_button"
                android:text="@string/morning"
                android:textColor="@color/material_color_bluegrey_100"
                android:textSize="@dimen/text_size_button_text"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_afternoon_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/main_tab_button"
                android:text="@string/afternoon"
                android:textColor="@color/material_color_bluegrey_100"
                android:textSize="@dimen/text_size_button_text"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_night_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/main_tab_button"
                android:text="@string/night"
                android:textColor="@color/material_color_bluegrey_100"
                android:textSize="@dimen/text_size_button_text"
                android:textStyle="bold" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/activity_vertical_margin_half">

            <TextView
                android:id="@+id/tv_north_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/north"
                android:textColor="@color/material_color_bluegrey_300"
                tools:drawableTop="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tv_west_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/west"
                android:textColor="@color/material_color_bluegrey_300"
                tools:drawableTop="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tv_central_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/activity_vertical_margin_half"
                android:gravity="center"
                android:text="@string/central"
                android:textColor="@color/material_color_bluegrey_300"
                tools:drawableTop="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tv_east_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/east"
                android:textColor="@color/material_color_bluegrey_300"
                tools:drawableTop="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tv_south_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/south"
                android:textColor="@color/material_color_bluegrey_500"
                tools:drawableTop="@mipmap/ic_launcher" />

            <Button
                android:id="@+id/btn_details_main"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="@string/details_arrows"
                android:textColor="@color/material_color_bluegrey_800"
                android:textSize="@dimen/text_size_button_text_small" />

        </RelativeLayout>

    </LinearLayout>

</FrameLayout>